--- a/index.html
+++ b/index.html
@@ -13,27 +13,27 @@
 <body>
     <div class="screen"></div>
     <div class="cleardelete">
-        <button>CLEAR</button>
+        <button onclick="clearAll()">CLEAR</button>
         <button>DELETE</button>
     </div>
     <div class="container">
 
-        <button class="btn">7</button>
-        <button class="btn">8</button>
-        <button class="btn">9</button>
-        <button class="btn">/</button>
-        <button class="btn">4</button>
-        <button class="btn">5</button>
-        <button class="btn">6</button>
-        <button class="btn">x</button>
-        <button class="btn">1</button>
-        <button class="btn">2</button>
-        <button class="btn">3</button>
-        <button class="btn">-</button>
-        <button class="btn">.</button>
-        <button class="btn">0</button>
-        <button class="btn">=</button>
-        <button class="btn">+</button>
+        <button class="btn" onclick="display(7)" data-number="7">7</button>
+        <button class="btn" onclick="display(8)" data-number="8">8</button>
+        <button class="btn" onclick="display(9)" data-number="9">9</button>
+        <button class="btn" data-operator="/">/</button>
+        <button class="btn" onclick="display(4)" data-number="4">4</button>
+        <button class="btn" onclick="display(5)" data-number="5">5</button>
+        <button class="btn" onclick="display(6)" data-number="6">6</button>
+        <button class="btn" data-operator=" *">*</button>
+        <button class="btn" onclick="display(1)" data-number="1">1</button>
+        <button class="btn" onclick="display(2)" data-number="2">2</button>
+        <button class="btn" onclick="display(3)" data-number="3">3</button>
+        <button class="btn" data-operator="-">-</button>
+        <button class="btn" data-number=".">.</button>
+        <button class="btn" onclick="display(0)" data-number="0">0</button>
+        <button class="btn" data-result="=">=</button>
+        <button class="btn" data-operator="+">+</button>
     </div>
 
 </body>
