--- a/index.html
+++ b/index.html
@@ -6,36 +6,43 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>a Calculator.</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    <script src="index.js"></script>
+    <script src="script.js" defer></script>
 </head>
 
 <body>
-    <div class="screen"></div>
-    <div class="cleardelete">
-        <button onclick="clearAll()">CLEAR</button>
-        <button>DELETE</button>
-    </div>
-    <div class="container">
+    <div class="calculator">
+        <div class="previous"></div>
+        <div class="screen">
 
-        <button class="btn" onclick="display(7)" data-number="7">7</button>
-        <button class="btn" onclick="display(8)" data-number="8">8</button>
-        <button class="btn" onclick="display(9)" data-number="9">9</button>
-        <button class="btn" data-operator="/">/</button>
-        <button class="btn" onclick="display(4)" data-number="4">4</button>
-        <button class="btn" onclick="display(5)" data-number="5">5</button>
-        <button class="btn" onclick="display(6)" data-number="6">6</button>
-        <button class="btn" data-operator=" *">*</button>
-        <button class="btn" onclick="display(1)" data-number="1">1</button>
-        <button class="btn" onclick="display(2)" data-number="2">2</button>
-        <button class="btn" onclick="display(3)" data-number="3">3</button>
-        <button class="btn" data-operator="-">-</button>
-        <button class="btn" data-number=".">.</button>
-        <button class="btn" onclick="display(0)" data-number="0">0</button>
-        <button class="btn" data-result="=">=</button>
-        <button class="btn" data-operator="+">+</button>
-    </div>
+        </div>
 
+        <div class="cleardelete">
+            <button class="btn-clear">AC</button>
+            <button class="btn-delete">DELETE</button>
+        </div>
+        <div class="container">
+            <button class="btn">7</button>
+            <button class="btn">8</button>
+            <button class="btn">9</button>
+            <button class="btn-op">/</button>
+            <button class="btn">4</button>
+            <button class="btn">5</button>
+            <button class="btn">6</button>
+            <button class="btn-op">*</button>
+            <button class="btn">1</button>
+            <button class="btn">2</button>
+            <button class="btn">3</button>
+            <button class="btn-op">-</button>
+            <button class="btn">.</button>
+            <button class="btn">0</button>
+            <button class="btn-eq">=</button>
+            <button class="btn-op">+</button>
+        </div>
+    </div>
 </body>
 
 </html>
