Redone everything, new logic , support for keyboards and can do more than one pair, NEED SOME COMMENTS !

--- a/index.html
+++ b/index.html
@@ -13,13 +13,12 @@
     <script src="script.js" defer></script>
 </head>
 
+
 <body>
     <div class="calculator">
-        <div class="previous"></div>
-        <div class="screen">
-
-        </div>
-
+        <div class="previous">let's</div>
+        <div class="currentresult"></div>
+        <div class="screen">calculate</div>
         <div class="cleardelete">
             <button class="btn-clear">AC</button>
             <button class="btn-delete">DELETE</button>
